unpackaged/main/default/objects/WOAPigs__c/WOAPigs__c.object-meta.xml
<CustomObject>
    <label>WOAPigs</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>WOAPigsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOAPigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>