unpackaged/main/default/objects/WOAPigs__c/fields/Any_Responsive_Action_to_be_Taken__c.field-meta.xml
<CustomField>
    <fullName>Any_Responsive_Action_to_be_Taken__c</fullName>
    <label>Any Responsive Action to be Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>