unpackaged/main/default/objects/WOAPigs__c/fields/Are_pens_sexed_or_unsexed__c.field-meta.xml
<CustomField>
    <fullName>Are_pens_sexed_or_unsexed__c</fullName>
    <label>Are pens sexed or unsexed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sexed</fullName>
            </value>
            <value>
                <fullName>Unsexed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>