unpackaged/main/default/objects/WOAPigs__c/fields/Average_mortality_prev_2_batch__c.field-meta.xml
<CustomField>
    <fullName>Average_mortality_prev_2_batch__c</fullName>
    <label>Average mortality prev 2 batch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>