unpackaged/main/default/objects/WOAPigs__c/fields/Average_number_of_objects_per_pen__c.field-meta.xml
<CustomField>
    <fullName>Average_number_of_objects_per_pen__c</fullName>
    <label>Average number of objects per pen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>