unpackaged/main/default/objects/WOAPigs__c/fields/Batch_start_date__c.field-meta.xml
<CustomField>
    <fullName>Batch_start_date__c</fullName>
    <label>Batch start date</label>
    <type>Date</type>
</CustomField>