unpackaged/main/default/objects/WOAPigs__c/fields/Breeding_Rearing_Finishing__c.field-meta.xml
<CustomField>
    <fullName>Breeding_Rearing_Finishing__c</fullName>
    <label>Breeding/Rearing/Finishing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breeding</fullName>
            </value>
            <value>
                <fullName>Rearing</fullName>
            </value>
            <value>
                <fullName>Finishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>