unpackaged/main/default/objects/WOAPigs__c/fields/Continuous_or_batch__c.field-meta.xml
<CustomField>
    <fullName>Continuous_or_batch__c</fullName>
    <label>Continuous or batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>