unpackaged/main/default/objects/WOAPigs__c/fields/Details_Improvement_Planned_next_12_mont__c.field-meta.xml
<CustomField>
    <fullName>Details_Improvement_Planned_next_12_mont__c</fullName>
    <label>Details Improvement Planned next 12 mont</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>