unpackaged/main/default/objects/WOAPigs__c/fields/Dry_sows_or_Finishing_pigs__c.field-meta.xml
<CustomField>
    <fullName>Dry_sows_or_Finishing_pigs__c</fullName>
    <label>Dry sows or Finishing pigs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry sows</fullName>
            </value>
            <value>
                <fullName>Finishing pigs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>