unpackaged/main/default/objects/WOAPigs__c/fields/Ear_Bitten_Pigs_Present__c.field-meta.xml
<CustomField>
    <fullName>Ear_Bitten_Pigs_Present__c</fullName>
    <label>Ear Bitten Pigs Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>