unpackaged/main/default/objects/WOAPigs__c/fields/End_weight__c.field-meta.xml
<CustomField>
    <fullName>End_weight__c</fullName>
    <label>End weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>