unpackaged/main/default/objects/WOAPigs__c/fields/Flank_bitten_pigs_present__c.field-meta.xml
<CustomField>
    <fullName>Flank_bitten_pigs_present__c</fullName>
    <label>Flank bitten pigs present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>