unpackaged/main/default/objects/WOAPigs__c/fields/Further_care_other__c.field-meta.xml
<CustomField>
    <fullName>Further_care_other__c</fullName>
    <label>Further care other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>