unpackaged/main/default/objects/WOAPigs__c/fields/Improvements_made_in_last_12_month__c.field-meta.xml
<CustomField>
    <fullName>Improvements_made_in_last_12_month__c</fullName>
    <label>Improvements made in last 12 month</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Improvement_Changes</valueSetName>
    </valueSet>
</CustomField>