unpackaged/main/default/objects/WOAPigs__c/fields/Improvements_planned_for_next_12_months__c.field-meta.xml
<CustomField>
    <fullName>Improvements_planned_for_next_12_months__c</fullName>
    <label>Improvements planned for next 12 months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Improvement_Changes</valueSetName>
    </valueSet>
</CustomField>