unpackaged/main/default/objects/WOAPigs__c/fields/Membership_transfer__c.field-meta.xml
<CustomField>
    <fullName>Membership_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Membership transfer</label>
    <type>Checkbox</type>
</CustomField>