unpackaged/main/default/objects/WOAPigs__c/fields/New_unit__c.field-meta.xml
<CustomField>
    <fullName>New_unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New unit</label>
    <type>Checkbox</type>
</CustomField>