unpackaged/main/default/objects/WOAPigs__c/fields/No_pig_euthanased_in_dry_sows__c.field-meta.xml
<CustomField>
    <fullName>No_pig_euthanased_in_dry_sows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No pig euthanased in dry sows</label>
    <type>Checkbox</type>
</CustomField>