unpackaged/main/default/objects/WOAPigs__c/fields/No_pig_mortality_in_continuous__c.field-meta.xml
<CustomField>
    <fullName>No_pig_mortality_in_continuous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No pig mortality in continuous</label>
    <type>Checkbox</type>
</CustomField>