unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_body_marks_Score_0__c.field-meta.xml
<CustomField>
    <fullName>Number_of_body_marks_Score_0__c</fullName>
    <label>Number of body marks - Score 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>