unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_body_wounds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_body_wounds__c</fullName>
    <label>Number of body wounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>