unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_lame_pigs_hospital_pen__c.field-meta.xml
<CustomField>
    <fullName>Number_of_lame_pigs_hospital_pen__c</fullName>
    <label>Number of lame pigs Hospital Pen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>