unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_leg_swellings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_leg_swellings__c</fullName>
    <label>Number of leg swellings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>