unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_pens_with_pigs_30_50kg__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pens_with_pigs_30_50kg__c</fullName>
    <label>Number of pens with pigs 30 - 50kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>