unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_pigs_assessed_in_pens_1_5__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pigs_assessed_in_pens_1_5__c</fullName>
    <label>Number of pigs assessed in pens 1 - 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>