unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_pigs_stone_chewing__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pigs_stone_chewing__c</fullName>
    <label>Number of pigs stone chewing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>