unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_rectal_prolapse__c.field-meta.xml
<CustomField>
    <fullName>Number_of_rectal_prolapse__c</fullName>
    <label>Number of rectal prolapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>