unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_skin_conditions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_skin_conditions__c</fullName>
    <label>Number of skin conditions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>