unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_tail_bitten__c.field-meta.xml
<CustomField>
    <fullName>Number_of_tail_bitten__c</fullName>
    <label>Number of tail bitten</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>