unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_thin_pigs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_thin_pigs__c</fullName>
    <label>Number of thin pigs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>