unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_traumatic_injury__c.field-meta.xml
<CustomField>
    <fullName>Number_of_traumatic_injury__c</fullName>
    <label>Number of traumatic injury</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>