unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_umbilical_hernia__c.field-meta.xml
<CustomField>
    <fullName>Number_of_umbilical_hernia__c</fullName>
    <label>Number of umbilical hernia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>