unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_uterine_vaginal_prolapse__c.field-meta.xml
<CustomField>
    <fullName>Number_of_uterine_vaginal_prolapse__c</fullName>
    <label>Number of uterine/vaginal prolapse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>