unpackaged/main/default/objects/WOAPigs__c/fields/Number_of_vulva_lesions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_vulva_lesions__c</fullName>
    <label>Number of vulva lesions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>