unpackaged/main/default/objects/WOAPigs__c/fields/Number_other_hospital_pens__c.field-meta.xml
<CustomField>
    <fullName>Number_other_hospital_pens__c</fullName>
    <label>Number other (hospital pens)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>