unpackaged/main/default/objects/WOAPigs__c/fields/Number_with_body_condition_Fat__c.field-meta.xml
<CustomField>
    <fullName>Number_with_body_condition_Fat__c</fullName>
    <label>Number with body condition - Fat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>