unpackaged/main/default/objects/WOAPigs__c/fields/Number_with_leg_swelling_Score_0__c.field-meta.xml
<CustomField>
    <fullName>Number_with_leg_swelling_Score_0__c</fullName>
    <label>Number with leg swelling- Score 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>