unpackaged/main/default/objects/WOAPigs__c/fields/Number_with_leg_swelling_Score_2__c.field-meta.xml
<CustomField>
    <fullName>Number_with_leg_swelling_Score_2__c</fullName>
    <label>Number with leg swelling- Score 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>