unpackaged/main/default/objects/WOAPigs__c/fields/Number_with_manure_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Number_with_manure_Score_1__c</fullName>
    <label>Number with manure - Score 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>