unpackaged/main/default/objects/WOAPigs__c/fields/Number_with_shoulder_lesions_Score_0__c.field-meta.xml
<CustomField>
    <fullName>Number_with_shoulder_lesions_Score_0__c</fullName>
    <label>Number with shoulder lesions - Score 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>