unpackaged/main/default/objects/WOAPigs__c/fields/Object_in_pen__c.field-meta.xml
<CustomField>
    <fullName>Object_in_pen__c</fullName>
    <label>Object in pen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toy</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
            <value>
                <fullName>Forage</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
                <isActive>false</isActive>
                <label>Forest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>