unpackaged/main/default/objects/WOAPigs__c/fields/Object_s_suspended_or_on_ground__c.field-meta.xml
<CustomField>
    <fullName>Object_s_suspended_or_on_ground__c</fullName>
    <label>Object(s) suspended or on ground</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>