unpackaged/main/default/objects/WOAPigs__c/fields/Other_bedding_type__c.field-meta.xml
<CustomField>
    <fullName>Other_bedding_type__c</fullName>
    <label>Other bedding type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>