unpackaged/main/default/objects/WOAPigs__c/fields/Other_object_in_pen__c.field-meta.xml
<CustomField>
    <fullName>Other_object_in_pen__c</fullName>
    <label>Other object in pen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>