unpackaged/main/default/objects/WOAPigs__c/fields/Other_pen_design__c.field-meta.xml
<CustomField>
    <fullName>Other_pen_design__c</fullName>
    <label>Other pen design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>