unpackaged/main/default/objects/WOAPigs__c/fields/Other_substrate__c.field-meta.xml
<CustomField>
    <fullName>Other_substrate__c</fullName>
    <label>Other substrate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>