unpackaged/main/default/objects/WOAPigs__c/fields/Pen_design_dry_sows__c.field-meta.xml
<CustomField>
    <fullName>Pen_design_dry_sows__c</fullName>
    <label>Pen design dry sows</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdoor arcs (and/or) tents</fullName>
            </value>
            <value>
                <fullName>Indoor only</fullName>
            </value>
            <value>
                <fullName>Outdoor farrowing / Indoor dry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>