unpackaged/main/default/objects/WOAPigs__c/fields/Pen_design_finishing_pigs__c.field-meta.xml
<CustomField>
    <fullName>Pen_design_finishing_pigs__c</fullName>
    <label>Pen design finishing pigs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pen - solid floor (scrape)</fullName>
            </value>
            <value>
                <fullName>Pen - part slatted floor</fullName>
            </value>
            <value>
                <fullName>Straw yard</fullName>
            </value>
            <value>
                <fullName>Outdoor arcs (and/or) tents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>