unpackaged/main/default/objects/WOAPigs__c/fields/Percentage_euthanased_in_dry_sows__c.field-meta.xml
<CustomField>
    <fullName>Percentage_euthanased_in_dry_sows__c</fullName>
    <label>Percentage euthanased in dry sows</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>