unpackaged/main/default/objects/WOAPigs__c/fields/Percentage_euthanased_mortality__c.field-meta.xml
<CustomField>
    <fullName>Percentage_euthanased_mortality__c</fullName>
    <label>Percentage euthanased mortality</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>