unpackaged/main/default/objects/WOAPigs__c/fields/Percentage_euthanased_mortalitycontinous__c.field-meta.xml
<CustomField>
    <fullName>Percentage_euthanased_mortalitycontinous__c</fullName>
    <label>Percentage euthanased mortalitycontinous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>