unpackaged/main/default/objects/WOAPigs__c/fields/Percentage_mortality_in_continuous__c.field-meta.xml
<CustomField>
    <fullName>Percentage_mortality_in_continuous__c</fullName>
    <label>Percentage mortality in continuous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>