unpackaged/main/default/objects/WOAPigs__c/fields/Percentage_mortality_not_including_euth__c.field-meta.xml
<CustomField>
    <fullName>Percentage_mortality_not_including_euth__c</fullName>
    <label>Percentage mortality (not including euth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>