unpackaged/main/default/objects/WOAPigs__c/fields/pigs_manipulating_other_than_enrichment__c.field-meta.xml
<CustomField>
    <fullName>pigs_manipulating_other_than_enrichment__c</fullName>
    <label>pigs manipulating other than enrichment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>