unpackaged/main/default/objects/WOAPigs__c/fields/Pigs_mixed_inc_drawn_within_past_7_da__c.field-meta.xml
<CustomField>
    <fullName>Pigs_mixed_inc_drawn_within_past_7_da__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pigs mixed (inc. drawn) within past 7 da</label>
    <type>Checkbox</type>
</CustomField>