unpackaged/main/default/objects/WOAPigs__c/fields/Pigs_needing_further_care__c.field-meta.xml
<CustomField>
    <fullName>Pigs_needing_further_care__c</fullName>
    <label>Pigs needing further care</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>