unpackaged/main/default/objects/WOAPigs__c/fields/Pigs_treated_as_batch_within_the_past__c.field-meta.xml
<CustomField>
    <fullName>Pigs_treated_as_batch_within_the_past__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pigs treated (as batch) within the past</label>
    <type>Checkbox</type>
</CustomField>