unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_bedding_type__c.field-meta.xml
<CustomField>
    <fullName>Predominant_bedding_type__c</fullName>
    <label>Predominant bedding type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Straw</fullName>
            </value>
            <value>
                <fullName>Wood shavings</fullName>
            </value>
            <value>
                <fullName>Woodchip</fullName>
            </value>
            <value>
                <fullName>Shredded paper</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>