unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_body_region_s_of_body_marks__c.field-meta.xml
<CustomField>
    <fullName>Predominant_body_region_s_of_body_marks__c</fullName>
    <label>Predominant body region(s) of body marks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hindquarters</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Flank</fullName>
            </value>
            <value>
                <fullName>Head and ear</fullName>
            </value>
            <value>
                <fullName>Legs</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>