unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_mort_reason_prev_2_batch__c.field-meta.xml
<CustomField>
    <fullName>Predominant_mort_reason_prev_2_batch__c</fullName>
    <label>Predominant mort reason prev 2 batch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>