unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_reason_continuous__c.field-meta.xml
<CustomField>
    <fullName>Predominant_reason_continuous__c</fullName>
    <label>Predominant reason continuous</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>