unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_reason_dry_sows__c.field-meta.xml
<CustomField>
    <fullName>Predominant_reason_dry_sows__c</fullName>
    <label>Predominant reason dry sows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>