unpackaged/main/default/objects/WOAPigs__c/fields/Predominant_substrate__c.field-meta.xml
<CustomField>
    <fullName>Predominant_substrate__c</fullName>
    <label>Predominant substrate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turf</fullName>
            </value>
            <value>
                <fullName>Straw</fullName>
            </value>
            <value>
                <fullName>Soil</fullName>
            </value>
            <value>
                <fullName>Silage</fullName>
            </value>
            <value>
                <fullName>Bark</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>