unpackaged/main/default/objects/WOAPigs__c/fields/Preferred_contact_details__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_details__c</fullName>
    <label>Preferred contact details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>