unpackaged/main/default/objects/WOAPigs__c/fields/Reason_for_further_care__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_further_care__c</fullName>
    <label>Reason for further care</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lameness</fullName>
            </value>
            <value>
                <fullName>Severe tail biting</fullName>
            </value>
            <value>
                <fullName>Traumatic injury</fullName>
            </value>
            <value>
                <fullName>Umbilical hernia</fullName>
            </value>
            <value>
                <fullName>Rectal prolapse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>